(maint) Allow instance variables in rspec tests
Although we generally should not allow instance variables in rspec
tests, we need to retrieve output that is dropped into instance
variables by parent methods. We aren't assigning any instance variables
in these tests, simply reading their content.

--- a/.sync.yml
+++ b/.sync.yml
@@ -26,3 +26,8 @@ Gemfile:
 
 spec/spec_helper.rb:
   mock_with: ':rspec'
+
+.rubocop.yml:
+  default_configs:
+    RSpec/InstanceVariable:
+      Enabled: false
