--- a/.sync.yml
+++ b/.sync.yml
@@ -23,6 +23,8 @@ Gemfile:
       - gem: beaker-puppet
         from_env: BEAKER_PUPPET_VERSION
         version: '~> 0.14'
+    ':development':
+      - gem: puppet-strings
 
 spec/spec_helper.rb:
   mock_with: ':rspec'
